--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "axios": "^1.6.8",
     "antd": "^5.16.0"
   },
   "devDependencies": {
@@ -25,11 +26,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  },
-  "overrides": {
-    "vite": {
-      "rollup": "npm:@rollup/wasm-node"
-    }
+    "vite": "^5.2.0",
+    "less": "^4.2.0",
+    "prettier": "^3.2.5",
+    "eslint-plugin-prettier": "^5.1.3"
   }
 }
