--- a/nginx.conf
+++ b/nginx.conf
@@ -15,5 +15,9 @@ http {
             index  index.html;
             try_files $uri $uri/ /index.html;
         }
+
+        location /api/ {
+            proxy_pass http://servercluster:3333/;
+        }
    }
 }
