--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.16.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
