--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     }
     server {
         listen       80;
-        server_name  localhost;
+        server_name  20.239.242.69;
 
         location / {
             root   /app;
