--- a/nginx.conf
+++ b/nginx.conf
@@ -8,16 +8,18 @@ http {
     }
     server {
         listen       80;
-        server_name  20.239.242.69;
+        server_name  47.96.86.157;
 
         location / {
+            proxy_read_timeout 3600;
             root   /app;
             index  index.html;
             try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
-            proxy_pass http://servercluster:3333/;
+            proxy_read_timeout 3600;
+            proxy_pass http://172.31.165.93:3333/;
         }
    }
 }
