--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,7 @@ jobs:
           host: ${{ secrets.ALIYUN_HOST }}
           username: ${{ secrets.ALIYUN_USER_NAME }}
           password: ${{ secrets.ALIYUN_PASSWORD }}
+          key: ${{ secrets.ALIYUN_SSH_KEY }}
           script: |
             docker stop poetry_frotend
             docker rm poetry_frotend
