--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "axios": "^1.6.8",
-    "antd": "^5.17.0",
-    "qs": "^6.12.1"
+    "antd": "^5.17.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
