--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "axios": "^1.6.8",
-    "antd": "^5.17.0"
+    "antd": "^5.17.0",
+    "markdown-it": "^14.1.0",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/qs": "^6.9.15",
+    "@types/markdown-it": "^14.1.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
