--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_BASE_API = http://127.0.0.1:3333
+VITE_APP_BASE_API = https://zypoetapi.wonderfulmeadow-daf4d488.eastasia.azurecontainerapps.io
