--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     }
     server {
         listen       80;
-        server_name  192.168.31.207;
+        server_name  process.env.VITE_APP_BASE_API;
 
         location / {
             proxy_read_timeout 3600;
@@ -19,7 +19,7 @@ http {
 
         location /api/ {
             proxy_read_timeout 3600;
-            proxy_pass http://192.168.31.207:3333/;
+            # proxy_pass http://192.168.31.207:3333/;
             proxy_http_version 1.1;
             proxy_set_header Connection '';
             proxy_buffering off;
