--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,14 +20,15 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USER_NAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          registry: registry.cn-hangzhou.aliyuncs.com
+          username: ${{ secrets.ALI_HUB_USR_NAME }}
+          password: ${{ secrets.ALI_HUB_PASSWORD }}
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: jim871939254/poetry_frontend:latest
+          tags: registry.cn-hangzhou.aliyuncs.com/jim_hub/poetry_frontend:latest
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -38,6 +39,5 @@ jobs:
           script: |
             docker stop poetry_frotend
             docker rm poetry_frotend
-            docker rmi jim871939254/poetry_frontend:latest
-            docker pull jim871939254/poetry_frontend:latest 
-            docker run -d -p 8080:80/tcp --name poetry_frotend jim871939254/poetry_frontend:latest
+            docker pull registry.cn-hangzhou.aliyuncs.com/jim_hub/poetry_frontend:latest 
+            docker run -d -p 8080:80/tcp --name poetry_frotend registry.cn-hangzhou.aliyuncs.com/jim_hub/poetry_frontend:latest
